<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">
    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginVertical="@dimen/dp_16"
        android:text="@string/lorem_ipsum"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_text"
        android:layout_marginTop="@dimen/dp_8"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:background="@drawable/bg_gray"
            android:text="@string/cancel"
            android:textColor="@color/md_grey_600"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/dp_8"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_action"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:background="@drawable/bg_primary"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp_8"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>