<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_marginBottom="@dimen/dp_16">
                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="250dp"
                        android:layout_height="200dp"
                        android:src="@drawable/ic_easytoll" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size_xxxlarge"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dp_8"
                        android:visibility="gone"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    style="@style/MyTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:textSize="@dimen/text_size"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    style="@style/MyTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="@dimen/text_size"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/login"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    android:gravity="center"
                    android:background="@drawable/bg_primary"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="@dimen/dp_30"/>

                <LinearLayout
                    android:id="@+id/ly_google"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_line_grey"
                    android:gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_google"
                        android:layout_marginEnd="@dimen/dp_4"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_with_google"
                        android:textColor="@color/md_grey_800"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_large"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>