<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000"
            app:elevation="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_xlarge"
                    android:layout_margin="@dimen/dp_16"/>
                <TextView
                    android:id="@+id/tv_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    android:layout_margin="@dimen/dp_16"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16">
                    <ImageView
                        android:id="@+id/iv_photo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_placeholder_profile"/>

                    <TextView
                        android:id="@+id/label_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_toEndOf="@id/iv_photo"
                        android:text="@string/name"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/text_size_large"
                        android:textColor="@color/md_grey_600"
                        android:layout_toEndOf="@id/iv_photo"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_below="@id/label_name"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/label_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="@dimen/text_size"
                        android:layout_toEndOf="@id/iv_photo"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_8"
                        android:layout_below="@id/tv_name"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/text_size_large"
                        android:textColor="@color/md_grey_600"
                        android:layout_toEndOf="@id/iv_photo"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_below="@id/label_email"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@color/md_grey_100">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history_transaksi"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_xlarge"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_20"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_marginTop="@dimen/dp_8"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>