<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000"
            app:elevation="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Topup Saldo Uang Elektronik"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_xlarge"
                    android:layout_margin="@dimen/dp_16"/>
            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">
                <RelativeLayout
                    android:id="@+id/rl_cardType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_line_primary"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_marginHorizontal="@dimen/dp_16">
                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/sp_cardType"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="2dp"
                        android:hint="@string/jenis_kartu"
                        android:textColorHint="@color/colorPrimary"
                        app:ms_hint="@string/jenis_kartu"
                        app:ms_hint_color="@color/colorPrimary"
                        app:ms_text_color="@android:color/black"
                        app:ms_arrow_tint="@color/colorPrimary"
                        app:ms_dropdown_max_height="350dp"
                        app:ms_dropdown_height="wrap_content"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/rl_nominal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_line_primary"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginHorizontal="@dimen/dp_16">
                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/sp_nominal"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="2dp"
                        android:hint="@string/nominal"
                        android:textColorHint="@color/colorPrimary"
                        app:ms_hint="@string/nominal"
                        app:ms_hint_color="@color/colorPrimary"
                        app:ms_text_color="@android:color/black"
                        app:ms_arrow_tint="@color/colorPrimary"
                        app:ms_dropdown_max_height="350dp"
                        app:ms_dropdown_height="wrap_content"/>
                </RelativeLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    style="@style/MyTextInputLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_cardNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_card"
                        android:inputType="number"
                        android:textSize="@dimen/text_size"
                        android:paddingStart="@dimen/dp_30"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/tv_pay"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingHorizontal="@dimen/dp_16"
                    android:text="@string/bayar"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/md_white_1000"
                    android:background="@drawable/bg_primary"
                    android:gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_30"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>